service.yaml
apiVersion: v1
kind: Service
metadata:
  name: securebank-api-service
  namespace: secure-core
spec:
  type: ClusterIP # Keeps the service completely invisible to the public internet
  selector:
    app: securebank-api
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
