ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: securebank-ingress
  namespace: secure-core
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Enforce HTTPS Redirection
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: securebank-api-service
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: securebank-frontend-service
            port:
              number: 80
